@@ -300,6 +300,12 @@ public class TimestampTest extends DatabaseTestCase {
       testEscape( "select * from tmp where a={fn user()}", "select * from tmp where a=user_name()" );
    }
 
+   public void testEscapes0007()
+      throws Exception
+   {
+      con.createStatement().execute( "exec dbo.spGetOrdersByItemID 7499, {d '2000-01-01'}, {d '2099-12-31'}" );
+   }
+
     public void testPreparedStatement0007() throws Exception {
         Statement stmt = con.createStatement();
         stmt.executeUpdate("create table #t0007 "
